# forecasting-stocks

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  train.py
.github/workflows/: actions.yml
.hooks/: requirements.sh  update_lock.sh  update_lock_requirements.sh
