[tool.poetry]
name = "forecasting-stocks"
version = "0.1.0"
description = "a basic model to forecats apple share price"
authors = ["Egor Howell <egorhowellbusiness@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.18"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
statsmodels = "^0.14.0"
scikit-learn = "^1.2.2"
black = "^24.8.0"
numpy = "^2.0.1"
isort = "^5.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
